--- a/project_management_app/project_task/templates/project_task/pb_view_filtersort_button.html
+++ b/project_management_app/project_task/templates/project_task/pb_view_filtersort_button.html
@@ -45,7 +45,7 @@
 
         <!-- Create New Task Button trigger modal -->
         <div class="col-sm-2 text-right" id="create-task-listview">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createNewTask">create new
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createNewTaskModal">create new
                 task
             </button>
         </div>
