--- a/project_management_app/project_task/templates/project_task/pb_card_view.html
+++ b/project_management_app/project_task/templates/project_task/pb_card_view.html
@@ -7,7 +7,7 @@
             <div class="card mb-3" style="height: 13rem;">
                 <div class="card-body">
                     <h4 class="card-title">
-                        <a href="#" data-toggle="modal" data-target="#editTask" data-task-id="{{ task.id }}">{{task.name}}</a>
+                        <a href="#" data-toggle="modal" data-target="#editTaskModal" data-task-id="{{ task.id }}">{{task.name}}</a>
                     </h4>
                     <h6 class="card-subtitle mb-2 text-muted"><strong>Story Point</strong>: {{task.story_point}}</h6>
                     <h6 class="card-subtitle mb-2 text-muted"><strong>Priority</strong>: {{task.priority}}</h6>
