--- a/project_management_app/project_task/templates/project_task/pb_edit_task.html
+++ b/project_management_app/project_task/templates/project_task/pb_edit_task.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_filters %}
 
 <!-- Edit Task Modal -->
-<div class="modal fade" id="editTask" tabindex="-1" role="dialog" aria-labelledby="editTaskModalLabel"
+<div class="modal fade" id="editTaskModal" tabindex="-1" role="dialog" aria-labelledby="editTaskModalLabel"
      aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
