--- a/project_management_app/project_task/templates/project_task/pb_edit_task.html
+++ b/project_management_app/project_task/templates/project_task/pb_edit_task.html
@@ -36,7 +36,7 @@
                 <div class="modal-footer">
                     <!-- Action button -->
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-primary" id="updateChanges">Update changes</button>
+                    <button type="submit" class="btn btn-primary" id="updateChanges" data-task-id="{{ task.id }}">Update changes</button>
                 </div>
             </form>
         </div>
