Added date sort button with frontend and backend logic

--- a/project_management_app/project_task/templates/project_task/project_backlog.html
+++ b/project_management_app/project_task/templates/project_task/project_backlog.html
@@ -91,10 +91,11 @@
      */
     function updateSortAndFilter() {
 
-        // this configure the view, priority_sort, tags_filter and more filters and sorts in the future
+        // this configures the view, priority_sort, tags_filter and more filters and sorts in the future
         let config = {
             'view': true,
             'priority_sort': true,
+            'date_sort': true,
             'tags_filter': true,
             // ... add more filters and sorts here in the future
         };
