--- a/project_management_app/project_task/templates/project_task/pb_view_filtersort_button.html
+++ b/project_management_app/project_task/templates/project_task/pb_view_filtersort_button.html
@@ -1,6 +1,6 @@
 <!-- View options and Create New Task button -->
 <div class="container-fluid mb-4 mt-4">
-    <div class="row">
+    <div class="row mb-2 mt-2">
         <!-- View options -->
         <div class="col-sm-2">
             <label for="view">View:</label>
@@ -14,7 +14,15 @@
                 {% endif %}
             </select>
         </div>
+        <!-- Create New Task Button trigger modal -->
+        <div class="col-sm-2 text-right" id="create-task-listview">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createNewTaskModal">create new
+                task
+            </button>
+        </div>
+    </div>
 
+    <div class="row mt-4">
         <!-- Priority Sort options -->
         <div class="col-sm-2">
             <label for="priority_sort">Priority:</label>
@@ -29,8 +37,22 @@
             </select>
         </div>
 
+        <!-- Date Sort options -->
+        <div class="col-sm-2">
+            <label for="date_sort">Date:</label>
+            <select id="date_sort" onchange="updateSortAndFilter()">
+                {% if date_sort == 'date_ascending' %}
+                <option value="date_ascending" selected>Ascending</option>
+                <option value="date_descending">Descending</option>
+                {% else %}
+                <option value="date_ascending">Ascending</option>
+                <option value="date_descending" selected>Descending</option>
+                {% endif %}
+            </select>
+        </div>
+
         <!-- Tags Filter options -->
-        <div class="col-sm-6 d-flex justify-content-start">
+        <div class="col-sm-8 d-flex">
             <label for="tags_filter">Tags:</label>
             <select id="tags_filter" multiple="multiple" style="width: 50%" onchange="updateSortAndFilter()">
                 {% for tag in tags %}
@@ -41,13 +63,6 @@
                 {% endif %}
                 {% endfor %}
             </select>
-        </div>
-
-        <!-- Create New Task Button trigger modal -->
-        <div class="col-sm-2 text-right" id="create-task-listview">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createNewTaskModal">create new
-                task
-            </button>
         </div>
     </div>
 </div>
