--- a/project_management_app/project_task/templates/project_task/pb_card_view.html
+++ b/project_management_app/project_task/templates/project_task/pb_card_view.html
@@ -4,11 +4,12 @@
         {% for task in tasks %}
         <!-- Create a card for each task -->
         <div class="col-sm-3" id="task-card-{{ task.id }}">
-            <div class="card mb-3" style="height: 13rem;">
+            <div class="card mb-3" style="height: 14rem;">
                 <div class="card-body">
                     <h4 class="card-title">
                         <a href="#" data-toggle="modal" data-target="#editTaskModal" data-task-id="{{ task.id }}">{{task.name}}</a>
                     </h4>
+                    <h6 class="card-subtitle mb-2 text-muted"><strong>Created</strong>: {{task.created_datetime}}</h6>
                     <h6 class="card-subtitle mb-2 text-muted"><strong>Story Point</strong>: {{task.story_point}}</h6>
                     <h6 class="card-subtitle mb-2 text-muted"><strong>Priority</strong>: {{task.priority}}</h6>
                     <div class="d-flex flex-wrap align-items-start">
