--- a/project_management_app/project_task/templates/project_task/pb_list_view.html
+++ b/project_management_app/project_task/templates/project_task/pb_list_view.html
@@ -8,6 +8,7 @@
             <th>Story Point</th>
             <th>Priority</th>
             <th>Tags</th>
+            <th>Creation DateTime</th>
             <th>Action</th>
         </tr>
         </thead>
@@ -23,6 +24,7 @@
                 <span class="badge badge-info m-1">{{tag}}</span>
                 {% endfor %}
             </td>
+            <td>{{task.created_datetime}}</td>
             <td>
                 <button type="submit" class="btn btn-danger delete-btn" data-task-id="{{ task.id }}">Delete</button>
             </td>
