--- a/project_management_app/project_task/templates/project_task/pb_edit_task.html
+++ b/project_management_app/project_task/templates/project_task/pb_edit_task.html
@@ -28,7 +28,7 @@
                         {{ edit_task_form.status| as_crispy_field}}
                         {{ edit_task_form.stage | as_crispy_field}}
                         {{ edit_task_form.assignee | as_crispy_field}}
-                        {{ edit_task_form.created_datetime | as_crispy_field }}
+                        {{ edit_task_form.created_date | as_crispy_field }}
                     </div>
                 </div>
 
