--- a/project_management_app/project_task/templates/project_task/base.html
+++ b/project_management_app/project_task/templates/project_task/base.html
@@ -47,6 +47,10 @@
         body {
             padding-top: 0; /* Adjust this value as needed */
         }
+        h1 {
+            border-bottom: 2px solid #333;  /* This will add a 2px solid border at the bottom of h1 element */
+            padding-bottom: 2px;
+        }
     </style>
     {% endblock %}
 </head>
