Added functionality to the create graph button

--- a/project_management_app/project_task/templates/project_task/sprint_board.html
+++ b/project_management_app/project_task/templates/project_task/sprint_board.html
@@ -20,12 +20,11 @@
 <h1>Sprint Board</h1>
 
 <!-- Create Graph Button -->
-<button class="btn btn-primary create-graph-btn" id="createGraphButton">Create Graph</button>
+<button onclick="window.location='{% url 'create_graph' %}'" class="btn btn-primary create-graph-btn" id="createGraphButton">Create Graph</button>
 {% endblock %}
 
 {% block js %}
 <script>
     // JavaScript for the Sprint Board will be added here
-    // Functionality to handle the Create Graph Button
 </script>
 {% endblock %}
