--- a/project_management_app/project_task/templates/project_task/home.html
+++ b/project_management_app/project_task/templates/project_task/home.html
@@ -8,53 +8,10 @@
 
 {% block content %}
 <h1>Home</h1>
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createNewTask">create new task</button>
-
-<!-- Modal -->
-<div class="modal fade" id="createNewTask" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-     aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <form id="taskForm" method="POST">
-                {% csrf_token %}
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Create New Task</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-
-                <!-- Modal Body -->
-                <div class="modal-body">
-                    <div class="d-grid gap-3 text-start">
-                        {{ form.name| as_crispy_field }}
-                        {{ form.type| as_crispy_field}}
-                        {{ form.priority| as_crispy_field}}
-                        {{ form.description| as_crispy_field}}
-                        {{ form.story_point| as_crispy_field}}
-                        {{ form.assignee| as_crispy_field}}
-                        {{ form.tags| as_crispy_field}}
-                        {{ form.status| as_crispy_field}}
-                        {{ form.stage| as_crispy_field}}
-                    </div>
-                </div>
-
-                <!-- Modal Footer -->
-                <div class="modal-footer">
-                    <!-- Action button -->
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-
-<!-- Button to create a new sprint -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createNewSprint">Create Sprint</button>
+<!-- Button to trigger the "Create New Sprint" modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createNewSprint">
+    Create Sprint
+</button>
 
 <!-- Modal for creating a new sprint -->
 <div class="modal fade" id="createNewSprint" tabindex="-1" role="dialog" aria-labelledby="sprintModalLabel" aria-hidden="true">
@@ -87,25 +44,6 @@
         </div>
     </div>
 </div>
-
-{% endblock %}
-
-{% block js %}
-<script>
-    $('#createNewTask').on('shown.bs.modal', function () {
-        // Focus on the first input of the form when the modal is shown
-        $('#taskForm input:first').trigger('focus')
-    })
-    $(document).ready(function () {
-        $('#id_tags').select2({
-            tags: true,
-            tokenSeparators: [','],
-            allowClear: true,
-            placeholder: 'Select tag(s)',
-            theme: 'bootstrap',
-        });
-    });
-</script>
 {% endblock %}
 
 {% block sprint_js %}
@@ -116,9 +54,5 @@
 </script>
 
 {% endblock %}
-
-
-
-
 
 
