--- a/project_management_app/project_task/templates/project_task/project_backlog.html
+++ b/project_management_app/project_task/templates/project_task/project_backlog.html
@@ -531,7 +531,7 @@
             $('#editTaskModal #id_story_point').val(edit_task.story_point);
             $('#editTaskModal #id_status').val(edit_task.status);
             $('#editTaskModal #id_stage').val(edit_task.stage);
-            $('#editTaskModal #id_assignee').val(edit_task.assignee);
+            $('#editTaskModal #id_assignee').val(edit_task.assignee.id);
             $('#editTaskModal #id_created_date').val(edit_task.created_date);
 
         }
