--- a/project_management_app/register/templates/registration/login.html
+++ b/project_management_app/register/templates/registration/login.html
@@ -17,50 +17,59 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
-    <!-- Select2 CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-theme/0.1.0-beta.10/select2-bootstrap.min.css"
-          rel="stylesheet"/>
-    <!-- jQuery Library -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- Select2 JS and initialization -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
-    <!-- Custom CSS -->
-    <style>
-        .title {
-            text-align: center;
-        }
-        .main {
-            margin-left: 480px;
-            margin-right: 480px;
-            padding: 0 10px;
-        }
-
-        body {
-            padding-top: 0; /* Adjust this value as needed */
-        }
-    </style>
-    {% endblock %}
-
-    {% block js %}
-    {% endblock %}
+    {% endblock %}s
 </head>
 
 <body>
+<div class="text-center">
+        <!-- New Box Container -->
+        <div class="container mt-5">
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class="card shadow-lg">
+                        <div class="card-body m-5">
+                            <form class="form-signin" method="POST">
+                                {% csrf_token %}
+                                <!-- Icon and Pleas sign in text -->
+                                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16"><path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/><path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/></svg>
+                                <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 
-<!-- Content -->
-<div>
-    <h1 class="title">Project Backlog</h1>
+                                <!-- Error message -->
+                                {% if form.errors %}
+                                <div class="alert alert-danger" role="alert">
+                                    Invalid login credentials. Please try again.
+                                </div>
+                                {% endif %}
 
-</div>
-<div id="content" name="content" class="main">
-    {% load crispy_forms_tags %}
-    <form method="post" class="from-group">
-        {% csrf_token %}
-        {{form|crispy}}
-        <button type="submit" class="btn btn-success">Login</button>
-        
-    </form>
-</div>
+                                <!-- Input fields -->
+                                <div class="d-grid gap-3">
+                                    <!-- Username field -->
+                                    <div class="form-group">
+                                        <label for="inputUsername" class="sr-only">Username</label>
+                                        <input type="text" id="inputUsername" name="username" class="form-control" placeholder="Username" required autofocus>
+                                    </div>
+
+                                    <!-- Password field -->
+                                    <div class="form-group">
+                                        <label for="inputPassword" class="sr-only">Password</label>
+                                        <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
+                                        <div class="text-start">
+                                            <p><strong><a href="#" class="text-decoration-none">Forgot password?</a></strong></p>
+                                        </div>
+                                    </div>
+
+                                    <!-- Sign in button -->
+                                    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+
+                                    <!-- Register prompt -->
+                                    <p>Don't have an account? <a href="/register">Sign up</a>.</p>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
