--- a/project_management_app/project_task/templates/project_task/base.html
+++ b/project_management_app/project_task/templates/project_task/base.html
@@ -52,36 +52,38 @@
 </head>
 
 <body>
-<!-- Sidenav -->
-<div class="sidenav">
-    <a href="{% url 'home' %}">Home</a>
-    <a href="{% url 'project_backlog' %}">Project Backlog</a>
-</div>
+    <!-- jQuery Library -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <!-- Bootstrap's JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+    <!-- Select2 JS and initialization -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 
-<!-- jQuery Library -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<!-- Popper.js -->
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-<!-- Bootstrap's JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-<!-- Select2 JS and initialization -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
-
-<!-- Content -->
-<div id="content" , name="content" class="main">
     {% if user.is_authenticated %}
-        {% block content %}
-        {% endblock %}
-    {% else %}
-    <p>Login <a href="/login">Here</a></p>
+        <!-- Sidenav -->
+        <div class="sidenav">
+            <a href="{% url 'home' %}">Home</a>
+            <a href="{% url 'project_backlog' %}">Project Backlog</a>
+        </div>
+        <!-- Content -->
+        <div id="content" , name="content" class="main">
+            {% block content %}
+            {% endblock %}
+        </div>
     {% endif %}
     
-</div>
+    <!-- Authentication -->
+    {% block authentication %}
+    {% endblock %}
 
-{% block js %}{% endblock %}
+
+    {% block js %}
+    {% endblock %}
 </body>
 </html>
