--- a/project_management_app/project_task/templates/project_task/base.html
+++ b/project_management_app/project_task/templates/project_task/base.html
@@ -72,6 +72,7 @@
 <div class="sidenav">
     <a href="{% url 'home' %}">Home</a>
     <a href="{% url 'project_backlog' %}">Project Backlog</a>
+    <a href="{% url 'sprint_board' %}">Sprint Board</a>
 </div>
 
 <!-- Content -->
