Created TimeLog Model and Chart Data Logic

--- a/project_management_app/project_task/templates/project_task/create_graph.html
+++ b/project_management_app/project_task/templates/project_task/create_graph.html
@@ -17,7 +17,7 @@
     <button id="showBurndown">Show Burndown Chart</button>
     <button id="showAccumulation">Show Accumulation Chart</button>
 
-    <h3 id="burndownTitle">Burndown Chart</h3>
+    <h3 id="burndownTitle" style="display: none;">Burndown Chart</h3>
     <canvas id="burndownChart" width="400" height="200" {% if not show_burndown %}style="display: none;"{% endif %}></canvas>
 
 
